--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDew94sTouoB_z2qik6NEU7-HLtuL8dNhk" />
+        <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
