--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.3.0
+  persistent_bottom_nav_bar: ^5.0.2
+  camera: ^0.10.5+2
 
 dev_dependencies:
   flutter_test:
@@ -75,7 +77,7 @@ flutter:
     - family: MadeTommy
       fonts:
         - asset: assets/fonts/MadeTommyRegular.otf
-        - asset: assets/fonts/MadeTommyBold.otf
+        - asset: assets/fonts/MadeTommyMedium.otf
           weight: 700
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
