--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.ecorewards">
     <application
-        android:label="ecorewards"
+        android:label="EcoRewards"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
